--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -8,20 +8,20 @@ layout: page
 {% assign rawtags = "" %}
 {% for post in site.posts %}
 {% assign post_tags = post.tags | join:'|' | append:'|' %}
-{% assign rawtags = rawtags | append:post_tags %}
+{% assign rawtags = rawtags | append:post_tags | append:'|' %}
 {% endfor %}
 
 <!-- cycles through portfolio collection to get tags -->
 {% assign portfolio =  site.portfolio | map: 'tags' | join: ','  | split: ',' | uniq %}
 {% for tag in portfolio %}
 {% assign portfolio_tags = tag | join:'|' | append:'|' %}
-{% assign rawtags = rawtags | append:portfolio_tags %}
+{% assign rawtags = rawtags | append:portfolio_tags | append:'|' %}
 {% endfor %}
 
 <!-- cycles through pages to get tags -->
 {% for page in site.pages %}
 {% assign page_tags = page.tags | join:'|'  %}
-{% assign rawtags = rawtags | append:page_tags %}
+{% assign rawtags = rawtags | append:page_tags | append:'|' %}
 {% endfor %}    
     
 <!-- Displays the list of tags-->
