Feat: videos now have tabs for trad and simp

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,10 @@
     
     <!-- Main JS (navbar.js and katex_init.js)-->
     <script defer=true src="{{ site.baseurl }}/assets/js/main.min.js"></script>
-    
+
+    <!-- Portfolio JS-->
+    <script defer=true src="{{ site.baseurl }}/assets/js/portfolio.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
