--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <!-- Html Elements for Search -->
-<input type="text" id="search-input" placeholder="Enter keywords..." class="search-bar">
+<input type="text" id="search-input" placeholder="Zoeken..." class="search-bar">
 <br>
 <br>
 <ul id="results-container"></ul>
@@ -25,7 +25,6 @@ layout: page
                           "tags"     : "{{ post.tags | join: ', ' | prepend: " " }}",
                           "url"      : "{{ site.baseurl }}{{ post.url }}",
                           "date"     : "{{ post.date | date: "%B %-d, %Y" }}",
-                          "excerpt"  : "{{ post.content | strip_html | strip_newlines | escape | truncate: '250' }}",
                           "content"  : "{{ post.content | strip_html | strip_newlines | escape }}"
                         } {% unless forloop.last %},{% endunless %}
                      {% endfor %},
@@ -37,15 +36,14 @@ layout: page
                             "tags"     : "{{ page.tags | join: ', ' | prepend: " " }}",
                             "url"      : "{{ site.baseurl }}{{ page.url }}",
                             "date"     : "{{ page.date | date: "%B %-d, %Y" }}",
-                            "excerpt"  : "{{ post.content | strip_html | strip_newlines | escape | truncate: '250' }}",
                             "content"  : "{{ page.content | strip_html | strip_newlines | escape | truncate: '250'  }}"
                          {% endif %}
                        } {% unless forloop.last %},{% endunless %}
                      {% endfor %}
                     {% endif %}
                   ],
-            searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="meta">{date} <div class="right"><i class="fa fa-tag"></i> {tags}</div></div><p>{excerpt}</p></div><hr> ',
-            noResultsText: 'No results found',
+            searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="meta">{date} <div class="right"><i class="fa fa-tag"></i> {tags}</div></div></div><hr> ',
+            noResultsText: 'Helemaal niks gevonden',
             limit: 10,
             fuzzy: false,
             exclude: []
